# transmission

./: CMakeLists.txt
Transmission.xcodeproj/: project.pbxproj
cmake/: TrMacros.cmake
daemon/: CMakeLists.txt
libtransmission/: CMakeLists.txt  file-posix.cc  platform-quota.cc  torrent.cc  transmission.h  utils.h
qt/: Application.cc  main.cc
utils/: CMakeLists.txt
